[package]
name = "org-roam-sync-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
emacs = "0.18"
rusqlite = "0.31"
rayon = "1.10"
walkdir = "2.5"
sha1 = "0.10"
hex = "0.4"
regex = "1.10"
anyhow = "1.0.103"
org_element = { git = "https://github.com/org-rs/org-rs" }
